frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-nginx
  template:
    metadata:
      labels:
        app: frontend-nginx
    spec:
      containers:
      - name: nginx
        image: 864981739210.dkr.ecr.us-east-1.amazonaws.com/frontend:1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: frontend-nginx-config
          items:
          - key: default.conf
            path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-service
spec:
  type: ClusterIP
  selector:
    app: frontend-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
